--- a/app.json
+++ b/app.json
@@ -2,9 +2,9 @@
   "expo": {
     "name": "tarefada",
     "slug": "tarefada",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/card.png",
     "scheme": "tarefada",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -17,9 +17,10 @@
       "supportsTablet": true
     },
     "android": {
+      "versionCode": 2,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+          "foregroundImage": "./assets/images/card.png",
+          "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
       "package": "com.gabrieldrb.tarefada"
